# MyTest

./: CMakeLists.txt  README.md
head/: MyAlgorithm.h  MyDesigner.h  MyOop.h  MySmartPtr.h
src/: MyDesigner.cpp  MySmartPtr.cpp  main.cpp
